--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".profileActivity"></activity>
+        <activity android:name=".profileActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -37,7 +37,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".ParkingLotDetails"></activity>
+        <activity android:name=".ParkingLotDetails" />
+        <activity android:name=".Favorites" />
+        <activity android:name=".AboutUs"></activity>
     </application>
 
 </manifest>
